# Ivero_backend_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_docker.sh  webrtc_install.sh
config/: config.txt
include/ivero_backend_server/: configure_message.h  ice_candidate_message.h  sdp_message.h  utility.h  video_capture.h  webrtc_client.h  webrtc_json_parser.h  webrtc_message.h  webrtc_server.h  webrtc_web_server.h
src/: configure_message.cpp  ice_candidate_message.cpp  ivero_backend_server.cpp  sdp_message.cpp  utility.cpp  video_capture.cpp  webrtc_client.cpp  webrtc_json_parser.cpp  webrtc_message.cpp  webrtc_server.cpp  webrtc_web_server.cpp
web/: index.js  viewer.html  viewer.js  webrtc_ros.js
